src/index.css
@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@200;400;500;700&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  user-select: none;
}
body {
  font-size: 16px;
  font-family: "Kumbh Sans", sans-serif;
}

.navGrid {
  @apply grid gap-0;
  grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
}
.navLink {
  @apply relative max-md:font-[500]  md:h-[6rem] text-sec-300 hover:text-sec-400 px-6 md:px-0 h-full flex items-center justify-start max-md:border-b border-b-sec-300;
}
.navLink.active {
  @apply text-sec-400;
}
.navLink:hover::before {
  @apply w-full;
}
.navLink::before {
  @apply max-md:content-[""] h-full w-0 absolute bg-primary-100 -z-10 top-0 left-0 transition-all duration-1000 ease-out;
}
.navLink::after {
  @apply md:content-[""] w-full h-[2px] bg-primary-200 opacity-0 hover:opacity-100 transitionMe absolute bottom-0 left-0;
}
.navLink.active::after {
  @apply opacity-100;
}
.noBefore::before {
  display: none;
}
.container {
  padding: 0 15px;
}
@media screen and (min-width: 1280px) {
  .container {
    @apply max-w-[1200px];
  }
}

.transitionMe {
  @apply transition-all duration-300;
}

.smOnly {
  @apply md:hidden;
}
.bigOnly {
  @apply max-md:hidden;
}

.navOverlay {
  @apply fixed w-full h-full top-0 left-0 z-10 bg-primary-100;
}

.section {
  @apply min-h-[calc(100vh-6rem)] pt-10;
}

.btn-primary {
  @apply px-8 py-2 rounded-lg text-white font-medium text-base lg:py-3 lg:px-14 lg:text-xl transitionMe;
}
.btn-primary:hover {
  box-shadow: 3px 3px 10px 0 hsl(26, 100%, 55%);
}

.sneakerImage::before {
  @apply content-[""] absolute left-[55%] -translate-x-1/2 -translate-y-1/2 top-[60%] w-full aspect-square bg-primary-100 rounded-full -z-10;
}

